Add GigaChat responses
